index.css
/* General Section */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Maison Neue", sans-serif;
}

@font-face {
    font-family: "Maison Neue";
    src: url("./misc/fonts/MaisonNeueBlack.otf");
}

a {
    text-decoration: none;
    color: #e5e7eb;
    font-size: 1.5rem;
}

a:hover,
a:active {
    transition-duration: 0.4s;
    color: #9A7E57;
}

button:hover,
button:active {
    background-color: #1f2937;
    border: solid #ffffff;
}

img:not(.header) {
    max-width: 600px;
    min-width: 250px;
    width: 100%;
}

body > * {
    display: flex;
    justify-content: center;
}

header > div,
section > div {
    display: flex;
    flex-flow: row wrap;
}

/* Header Section */

header {
    background-color: #1f2937;
    padding: 20px;
}

.header.container {
    display: flex;
    column-gap: 20px;
    row-gap: 20px;
    width: 48%;
    justify-content: space-between;
    align-items: center;
}

nav {
    display: flex;
    column-gap: 20px;
    align-items: center;
    line-height: 2;
    flex-wrap: wrap;
}

/* Hero Main Section */ 

.hero.section {
    background-color: #1f2937;
    padding: 100px;
}

.hero.container {
    row-gap: 50px;
    column-gap: 20px;
    color: #ffffff;
    justify-content: center;
}

.hero.description {
    display: flex;
    flex-flow: column wrap;
    row-gap: 30px;
    font-size: 1.5rem;
    max-width: 600px;
    flex: auto;
}

h1 {
    font-size: 2.1rem;
}

button {
    align-self: flex-start;
    padding: 12px 20px;
    margin: 10px 0 10px 0;
    background-color: #3882f6;
    font-size: 1.4rem;
    border-radius: 10px;
    border-style: none;
    font-weight: bold;
    color: #ffffff;
}

.hero.img {
    flex: auto;
}

/* Showcase Section */

.showcase.section {
    flex-direction: column;
    align-items: center;
    padding: 40px 40px 20px 40px;
}

h2 {
    padding: 30px;
    font-size: 2.2rem;
    font-weight: bolder;
    color: #1f2937;
    text-align: center;
}

.showcase.images {
    text-align: center;
    column-gap: 50px;
    justify-content: center;
}

.showcase.images img{
    display: flex;
    max-width: 290px;
    border: solid 8px #3882f6;
    border-radius: 15px;
}

figure {
    display: flex;
    flex-flow: column wrap;
}

figcaption {
    font-size: 1.7rem;
    font-weight: bold;
    padding: 20px 0 50px 0;
}

/* Quote Section */

.quote.section {
    background-color: #e5e7eb;
    padding: 100px;
}

.quote.section blockquote {
    font-size: 3rem;
    font-style: italic;
    color: #1f2937;
}

.quote.section figcaption {
    padding: 20px 0 0 0;
    margin-left: auto;
    text-wrap: nowrap;
}

/* Contact Section */

.contact.section {
    align-items: center;
    padding: 150px;
} 

.contact.box {
    display: flex;
    align-items: center;
    width: 800px;
    min-width: 0;
    justify-content: space-around;
    background-color: #3882f6;
    border-radius: 15px;
}

.contact.box .description {
    display: flex;
    flex-flow: column wrap;
    row-gap: 10px;
    padding: 40px;
    font-size: 1.6rem;
    color: #ffffff;
}

h4 {
    font-weight: bolder;
    font-size: 1.8rem;
}

.contact.box button {
    align-self: center;
    padding: 20px;
    border: solid #ffffff;
    padding: 10px 20px;
}

/* Copyright Footer Section */

footer {
    padding: 50px;
    background-color: #1f2937;
    color: #ffffff;
    font-size: 1.5rem;
}

